--- a/likes.html
+++ b/likes.html
@@ -25,7 +25,7 @@
 </ul>
 <img src="images/download.jpg" alt="One Direction">
 <ul>
-<li><a href="hoofdpagina.html"> Ga terug naar de Hoofdpagina </a></li>
+<li><a href="index.html"> Ga terug naar de Hoofdpagina </a></li>
 <li><a href="hobbys.html"> Ga naar Hobby's pagina</a></li>
     <li></li>
 </ul>
