--- a/hobbys.html
+++ b/hobbys.html
@@ -18,7 +18,7 @@
     <li> Hockey </li>
     <li> Dit is een sport waarbij je met sticks een puk in de goal moet krijgen.</li>
     <li> <a href="http://www.saint-georges.be/"> Site Hockey </a></li>
-    <li><a href="hoofdpagina.html"> Ga terug naar de Hoofdpagina </a></li>
+    <li><a href="index.html"> Ga terug naar de Hoofdpagina </a></li>
     <li><a href="likes.html"> Ga naar likes pagina</a></li>
     <li></li>
 </ul>
