--- a/likes.html
+++ b/likes.html
@@ -26,8 +26,7 @@
 <img src="images/download.jpg" alt="One Direction">
 <ul>
 <li><a href="index.html"> Ga terug naar de Hoofdpagina </a></li>
-<li><a href="hobbys.html"> Ga naar Hobby's pagina</a></li>
-    <li></li>
+<li><a href="hobbys.html"> Ga naar Hobby's pagina</a></l>
 </ul>
 </body>
 </html>
