--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HoofdPagina</title>
 </head>
 <body>
 <h1>Gilles Debakker</h1>
@@ -17,7 +17,43 @@
 <ul>
     <li><a href="hobbys.html"> Ga naar Hobby's pagina</a></li>
     <li><a href="likes.html"> Ga naar Likes pagina</a></li>
-    <li></li>
 </ul>
+<table border="1" width="95%">
+    <colgroup>
+        <col width="10%">
+        <col width="10%">
+        <col width="10%">
+        <col width="10%">
+        <col width="10%">
+    </colgroup>
+
+    <tr>
+        <th>Vak</th>
+        <th>Gilles Perneel</th>
+        <th>Kasper Martens</th>
+        <th>Niels Witdouck</th>
+        <th>Gilles Declercq</th>
+    </tr>
+    <tr>
+        <td>Programmeren</td>
+        <td>11</td>
+        <td>/</td>
+        <td>12</td>
+        <td>13</td>
+    </tr>
+    <tr>
+        <td>System managment</td>
+        <td>14</td>
+        <td>/</td>
+        <td>14</td>
+        <td>16</td>
+    </tr>
+    <tr>
+        <td>Computer Systems</td>
+        <td>13</td>
+        <td>16</td>
+        <td>11</td>
+        <td>10</td>
+    </tr>
 </body>
 </html>
